Ramu + Umair | Add required languages json files and configuration

--- a/locales/te.json
+++ b/locales/te.json
@@ -1,5 +1,5 @@
 {
-	"Vakyansh: The Home of Speech Recognition Essentials for Indian Languages": "Vakyansh: The Home of Speech Recognition Essentials for Indian Languages",
+	"Vakyansh: The Home of Speech Recognition Essentials for Indian Languages": "వాక్యన్ష్: భారతీయ భాషలకు ప్రసంగ గుర్తింపు ఎస్సెన్షియల్స్ హోమ్",
 	"Know More": "Know More",
 	"Vakyansh aims to host the key essentials of Automatic Speech Recognition (ASR) technology, focusing on Indian languages. It is a resource that allows people to build applications that leverage speech recognition.": "Vakyansh aims to host the key essentials of Automatic Speech Recognition (ASR) technology, focusing on Indian languages. It is a resource that allows people to build applications that leverage speech recognition.",
 	"Select language": "Select language",
