|Priyanshu| added static nav bar on home page to select language to contribute/validate

--- a/locales/en.json
+++ b/locales/en.json
@@ -79,5 +79,6 @@
 	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
 	"Ensure there is <b>no background noise</b>": "Ensure there is <b>no background noise</b>",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>",
-	"Get started by clicking on <b>Record</b> button": "Get started by clicking on <b>Record</b> button"
+	"Get started by clicking on <b>Record</b> button": "Get started by clicking on <b>Record</b> button",
+	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:"
 }
