|Priyanshu| added pop-up on home page to choose content language

--- a/locales/hi.json
+++ b/locales/hi.json
@@ -87,5 +87,7 @@
 	"to go back to home page": "to go back to home page",
 	"Instructions": "Instructions",
 	"Play": "Play",
-	"Validating Instructions": "Validating Instructions"
+	"Validating Instructions": "Validating Instructions",
+	"Select Your Preferred Language": "Select Your Preferred Language",
+	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:"
 }
