|Priyanshu| added onHover event on 'say' and 'listen' cards

--- a/locales/en.json
+++ b/locales/en.json
@@ -79,5 +79,8 @@
 	"We know you can do more!": "We know you can do more!",
 	"Contribute More": "Contribute More",
 	"Share it with your friends and family": "Share it with your friends and family",
-	"Come Back again to<br />hit your goalpost": "Come Back again to<br />hit your goalpost"
+	"Come Back again to<br />hit your goalpost": "Come Back again to<br />hit your goalpost",
+	"Instructions": "Instructions",
+	"Play": "Play",
+	"Validating Instructions": "Validating Instructions"
 }
