|Priyanshu| user can contribute in Hindi or Odia language

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,17 @@
 {
+	"Language": "English",
+	"Assamese": "Assamese",
+	"Bengali": "বাংলা",
+	"English": "English",
+	"Gujrati": "ગુજરાતી",
+	"Hindi": "हिन्दी",
+	"Kannada": "ಕನ್ನಡ",
+	"Malayalam": "മലയാളം",
+	"Marathi": "मराठी",
+	"Odia": "ଘୃଣା",
+	"Punjabi": "ਪੰਜਾਬੀ",
+	"Tamil": "தமிழ்",
+	"Telugu": "తెలుగు",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "About Us",
 	"Vakyansh: The Home of Speech Recognition Essentials for Indian Languages": "Vakyansh: The Home of Speech Recognition Essentials for Indian Languages",
@@ -30,7 +43,6 @@
 	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
 	"Terms & Conditions": "Terms & Conditions",
 	"Privacy Policy": "Privacy Policy",
-	"Language": "Language",
 	"Let's get started!": "Let's get started!",
 	"SKIP": "SKIP",
 	"STOP RECORDING": "STOP RECORDING",
@@ -82,5 +94,12 @@
 	"Come Back again to<br />hit your goalpost": "Come Back again to<br />hit your goalpost",
 	"Instructions": "Instructions",
 	"Play": "Play",
-	"Validating Instructions": "Validating Instructions"
+	"Validating Instructions": "Validating Instructions",
+	"Say": "Say",
+	"Contribute Your Voice": "Contribute Your Voice",
+	"Contribute your voice to create an open data repository of Indian languages": "Contribute your voice to create an open data repository of Indian languages",
+	"Listen": "Listen",
+	"Verify What They Say": "Verify What They Say",
+	"Help us by validating the voice samples that others have contributed": "Help us by validating the voice samples that others have contributed",
+	"Odia (Select languages)": "Odia (Select languages)"
 }
