--- a/locales/ta.json
+++ b/locales/ta.json
@@ -1,4 +1,17 @@
 {
+	"Language": "தமிழ்",
+	"Assamese": "Assamese",
+	"Bengali": "বাংলা",
+	"English": "English",
+	"Gujrati": "ગુજરાતી",
+	"Hindi": "हिन्दी",
+	"Kannada": "ಕನ್ನಡ",
+	"Malayalam": "മലയാളം",
+	"Marathi": "मराठी",
+	"Odia": "ଘୃଣା",
+	"Punjabi": "ਪੰਜਾਬੀ",
+	"Tamil": "தமிழ்",
+	"Telugu": "తెలుగు",
 	"Vakyansh: The Home of Speech Recognition Essentials for Indian Languages": "Vakyansh: The Home of Speech Recognition Essentials for Indian Languages",
 	"Know More": "Know More",
 	"Vakyansh aims to host the key essentials of Automatic Speech Recognition (ASR) technology, focusing on Indian languages. It is a resource that allows people to build applications that leverage speech recognition.": "Vakyansh aims to host the key essentials of Automatic Speech Recognition (ASR) technology, focusing on Indian languages. It is a resource that allows people to build applications that leverage speech recognition.",
@@ -11,7 +24,6 @@
 	"Show details": "Show details",
 	"START RECORDING IN": "START RECORDING IN",
 	"Speaker Details": "Speaker Details",
-	"Language": "Language",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "About Us",
 	"Terms & Conditions": "Terms & Conditions",
@@ -82,5 +94,14 @@
 	"Get started by clicking on <b>Record</b> button": "Get started by clicking on <b>Record</b> button",
 	"Instructions": "Instructions",
 	"Play": "Play",
-	"Validating Instructions": "Validating Instructions"
+	"Validating Instructions": "Validating Instructions",
+	"Say": "Say",
+	"Contribute Your Voice": "Contribute Your Voice",
+	"Contribute your voice to create an open data repository of Indian languages": "Contribute your voice to create an open data repository of Indian languages",
+	"Listen": "Listen",
+	"Verify What They Say": "Verify What They Say",
+	"Help us by validating the voice samples that others have contributed": "Help us by validating the voice samples that others have contributed",
+	"Odia (Select languages)": "Odia (Select languages)",
+	"Select Your Preferred Language": "Select Your Preferred Language",
+	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:"
 }
