--- a/locales/te.json
+++ b/locales/te.json
@@ -100,5 +100,14 @@
 	"Help us by validating the voice samples that others have contributed": "Help us by validating the voice samples that others have contributed",
 	"Odia (Select languages)": "Odia (Select languages)",
 	"Select Your Preferred Language": "Select Your Preferred Language",
-	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:"
+	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
+	"Instructions": "Instructions",
+	"Play": "Play",
+	"Thank you for validating!": "Thank you for validating!",
+	"We don't have any more sentences for you to validate. You can contribute more for the language for others to validate": "We don't have any more sentences for you to validate. You can contribute more for the language for others to validate",
+	"You have helped us validate 10 recordings out \"x\" sentences contributed in \"y\" language.": "You have helped us validate 10 recordings out \"x\" sentences contributed in \"y\" language.",
+	"total validated": "total validated",
+	"total contributed": "total contributed",
+	"Validate More": "Validate More",
+	"Validating Instructions": "Validating Instructions"
 }
