--- a/locales/gu.json
+++ b/locales/gu.json
@@ -109,5 +109,7 @@
 	"total validated": "total validated",
 	"total contributed": "total contributed",
 	"Validate More": "Validate More",
-	"Validating Instructions": "Validating Instructions"
+	"Validating Instructions": "Validating Instructions",
+	"languages contributed": "languages contributed",
+	"hours recorded": "hours recorded"
 }
