--- a/locales/pa.json
+++ b/locales/pa.json
@@ -100,5 +100,7 @@
 	"Help us by validating the voice samples that others have contributed": "Help us by validating the voice samples that others have contributed",
 	"Odia (Select languages)": "Odia (Select languages)",
 	"Select Your Preferred Language": "Select Your Preferred Language",
-	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:"
+	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
+	"languages contributed": "languages contributed",
+	"hours recorded": "hours recorded"
 }
