|Ramu| Add malayalam, kannada translations

--- a/locales/hi.json
+++ b/locales/hi.json
@@ -3,6 +3,7 @@
 	"Language": "भाषा",
 	"Speech Recognition Models": "भाषण मान्यता मॉडल",
 	"About Us": "हमारे बारे में",
+	"Select the language for contribution": "സംഭാവന നൽകാനുള്ള ഭാഷ തിരഞ്ഞെടുക്കുക",
 	"Say": "कहिए",
 	"Contribute Your Voice": "आपकी आवाज़ का योगदान",
 	"Contribute your voice to create an open data repository of Indian languages": "भारतीय भाषाओं के विशाल डाटा संग्रह के लिए अपनी आवाज़ का योगदान दें",
@@ -28,7 +29,7 @@
 	"Username": "यूज़रनेम",
 	"Please don't use email or mobile number as user name": "कृपया उपयोगकर्ता नाम के रूप में ईमेल या मोबाइल नंबर का उपयोग न करें",
 	"Select Mothertongue": "चयनित मातृ भाषा",
-	"Pick age range": "ऐज ग्रुप चुनें",
+	"Select Age Group": "ऐज ग्रुप चुनें",
 	"I have read and agree to the": "मैंने नियम और शर्तों को पढ़ा और उनसे सहमत हूं",
 	"Terms and Conditions": "नियम एवं शर्तें",
 	"LET'S GO": "आगे बढ़ते हैं।",
@@ -123,7 +124,7 @@
 	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "एक भाषा की पहचान का मॉडल, जो केवल भारतीय भाषाओं पर केंद्रित हो, उसके विकास के लिए विविध भारतीय आवाज़ों के विशाल डाटा संग्रह की ज़रूरत है। वाक्यांश भारतीय भाषाओं के विशाल डाटा संग्रह के लिए आपको आमंत्रण देता है कि आप इस क्रम में अपनी आवाज़ का योगदान दें।",
 	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "भाषा की पहचान के मॉडल का समाधान, उन आंकड़ों की विविधता में शामिल है, जो आप राज्यों, बोलियों, लहजे, लिंग और आयु वर्ग में योगदान करके प्रदान किए हैं। देश भर में इस विविधता का परिमाण हमें अपनी भाषाओं को सशक्त बनाने की शक्ति देता है।",
 	"Top Languages": "शीर्ष भाषाएं",
-	"By hours of data recorded": "घंटों के आंकड़ों में योगदान दिया",
+	"By hours of data contributed": "घंटों के आंकड़ों में योगदान दिया",
 	"By number of speakers": "वक्ताओं की संख्या",
 	"VIEW ALL DETAILS": "सभी जानकारी देखें",
 	"--------": "-------"
