--- a/locales/bn.json
+++ b/locales/bn.json
@@ -1,3 +1,100 @@
 {
-	
+	"Language": "Language",
+	"Speech Recognition Models": "Speech Recognition Models",
+	"About Us": "আমাদের সম্পর্কে",
+	"Select the language for contribution": "অবদানের জন্য ভাষা নির্বাচন করুন",
+	"Say": "বলুন",
+	"Contribute Your Voice": "আপনার ভয়েস অবদান রাখুন",
+	"Contribute your voice to create an open data repository of Indian languages": "Contribute your voice to create an open data repository of Indian languages",
+	"Listen": "শুনুন",
+	"Verify What They Say": "তারা যা বলে তা যাচাই করুন",
+	"Help us by validating the voice samples that others have contributed": "অন্যরা যে অবদান রেখেছিল তার ভয়েস নমুনাগুলি যাচাই করে আমাদের সহায়তা করুন",
+	"Vakyansh: A crowdsourcing initiative for Indian languages": "ভাক্যাংশ: ভারতীয় ভাষাগুলির জন্য জনসমাগমের উদ্যোগ",
+	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "ভারতীয় ভাশায় স্পিচ রিকোগ্নেশন মডেলগুলির বিকাশের জন্য, বিভিন্ন ভারতীয় কণ্ঠগুলির একটি মুক্ত তথ্য সংগ্রহস্থল প্রয়োজন।ভাক্যাংশ আপনাকে ভারতীয় ভয়েসগুলির একটি বিভিন্ন মুক্ত তথ্য ভান্ডার তৈরি করতে আপনার আওয়াজ পৌঁছানোর জন্য অবদান রাখতে আমন্ত্রণ জানাছে।",
+	"Know More": "আরও জানুন",
+	"We rely on your contributions": "আমরা আপনার অবদানের উপর নির্ভর করি",
+	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "স্পিচ রিকোগ্নেশন মডেলগুলি তৈরির মূল চাবিকাঠি, যা আপনি বিভিন্ন রাজ্য, উপভাষা, উচ্চারণ, লিঙ্গ এবং বয়সের অংশ জুড়ে অবদানের মাধ্যমে সরবরাহ করেন সেই ডেটার বৈচিত্র্যের মধ্যে রয়েছে। দেশজুড়ে এই বৈচিত্র্যের বিশালতা আমাদের ভাষাগুলি ক্ষমতায়নে সম্মিলিত শক্তি দেয়।",
+	"languages contributed": "ভাষা অবদান",
+	"speakers contributed": "বক্তারা অবদান রেখেছিলেন",
+	"hours recorded": "ঘন্টা রেকর্ড",
+	"Top Languages": "শীর্ষ ভাষা",
+	"By hours of data contributed": "কয়েক ঘন্টা ডেটা অবদান",
+	"By number of speakers": "স্পিকার সংখ্যা দ্বারা",
+	"VIEW ALL DETAILS": "সমস্ত বিবরণ দেখুন",
+	"Speaker Details": "স্পিকারের বিবরণ",
+	"All the fields are optional but you can enrich your dataset contribution by providing the demographic details.": "All the fields are optional but you can enrich your dataset contribution by providing the demographic details.",
+	"Not You? Change User": "আপনি কি ? ব্যবহারকারী পরিবর্তন করুন",
+	"Username": "ব্যবহারকারীর নাম",
+	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
+	"Mother Tongue": "মাতৃভাষা",
+	"Select Mothertongue": "মাতৃভাষা নির্বাচন করুন",
+	"Age Group": "বয়স গ্রুপ",
+	"Select Age Group": "বয়স গ্রুপ  নির্বাচন করুন",
+	"Gender": "লিঙ্গ",
+	"Male": "পুরুষ",
+	"Female": "মহিলা",
+	"Others": "অন্যান্য",
+	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "<a href=\"/terms-and-conditions\"> আমি শর্তাদি এবং শর্তাদি পড়েছি এবং তাতে সম্মত হয়েছি </a>",
+	"LET'S GO": "চলো শুরু করি",
+	"Hide details": "Hide details",
+	"Select Your Preferred Language": "আপনার পছন্দের ভাষা নির্বাচন করুন",
+	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
+	"Terms & Conditions": "শর্তাবলী",
+	"Privacy Policy": "গোপনীয়তা নীতি",
+	"-------- ABOUT US --------": "-------- ABOUT US -------",
+	"An open data strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.": "একটি উন্মুক্ত তথ্য কৌশল বিভিন্ন ভাষা সম্প্রদায়, ব্যক্তি ও প্রযুক্তিবিদ, যারা তাদের ভাষা সম্পর্কে উৎসাহী,তারা স্পিচ রিকোগ্নেশন অ্যাপ্লিকেশনগুলি বিকাশ করতে এবং সম্প্রদায়ের কল্যাণের জন্য বিভিন্ন ক্ষেত্রে তাদের সংহত করতে সক্ষম করবে।",
+	"Our multilingual DNA is still a missing piece in digital first strategy": "আমাদের বহুভাষিক ডি এন এ এখনও ডিজিটাল প্রথম কৌশলটিতে একটি অনুপস্থিত অংশ",
+	"India being a vast multilingual country, 90% of India’s population relies on regional languages to conduct their educational, social & digital activities.": "ভারত একটি বিশাল বহুভাষিক দেশ হওয়ায় ভারতের জনসংখ্যার ৯০% তাদের শিক্ষাগত, সামাজিক ও ডিজিটাল কার্যক্রম পরিচালনার জন্য আঞ্চলিক ভাষার উপর নির্ভর করে।",
+	"As the volume of internet users multiplies and there is a demand to access digital platforms for financial, educational and economic activities, there is a need to start thinking Indian languages first.": "ইন্টারনেট ব্যবহারকারীর সংখ্যা যেহেতু বহুগুণ  এবং আর্থিক, শিক্ষামূলক এবং অর্থনৈতিক কর্মকাণ্ডের জন্য ডিজিটাল প্ল্যাটফর্মগুলি ব্যবহারের সুযোগ রয়েছে, তাই প্রথমে ভারতীয় ভাষাগুলি সমন্ধে চিন্তাভাবনা শুরু করা দরকার।",
+	"Winning back our languages by introducing localization in our ecosystem": "আমাদের ইকোসিস্টেমে স্থানীয়করণ রূপদান করে আমাদের ভাষাগুলি ফিরিয়ে আনা",
+	"There is a felt need for a speech recognition technology that specializes in Indian languages, that meets a high accuracy bar and is closer to the daily language and communication functions of users of diverse Indian languages.": " স্পিচ রিকোগ্নেশন প্রযুক্তির একটি অনুভূতি প্রয়োজন যা ভারতীয় ভাষাগুলিতে বিশেষায়িত,যাতে এটি  নির্ভুল হয় এবং বিভিন্ন ভারতীয় ভাষার ব্যবহারকারীদের প্রতিদিনের ভাষা এবং যোগাযোগের কাজগুলির নিকটবর্তী হয়।",
+	"Speech recognition is a technology that converts speech to real-time text. Such a model for Indian languages has the potential to become a building block to a digital first model, in various sectors, such as, education, healthcare and media.": "স্পিচ রিকোগ্নেশন এমন একটি প্রযুক্তি যা বক্তাকে বাস্তবিক পাঠ্যে রূপান্তর করে। ভারতীয় ভাষাগুলির জন্য এ জাতীয় মডেলটির বিভিন্ন ক্ষেত্রে যেমন শিক্ষা, স্বাস্থ্যসেবা এবং মিডিয়াগুলিতে ব্যবহার অপরিহর্য হয়ে যাওয়ার সম্ভাবনা রয়েছে।",
+	"The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.": "যে সরঞ্জামগুলি, ইউটিলিটিগুলি এবং মডেলগুলি উন্নত করার প্রস্তাব করা হয়েছে সেগুলি ভাক্যাংশ জনসমাগমের প্ল্যাটফর্মের মাধ্যমে মুক্ত উৎসের অবদানের উপর নির্ভর করবে।",
+	"Crowd Sourcing & your contribution": "জনসমাগম এবং আপনার অবদান:",
+	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.": "স্পিচ রিকোগ্নেশন \"মেশিন-লার্নিং\" প্রযুক্তির উপর নির্ভর করে যার মধ্যে রয়েছে বিবিধ ভারতীয় ভয়েস এবং সংশ্লিষ্ট পাঠ্যর অন্তর্ভুক্ত ডেটাসেটের বিশাল সংগ্রহ। ভাক্যাংশ এর মাধ্যমে একস্টেপ  ভারতীয় ভাষায় কথা বলার জন্য বিভিন্ন উন্মুক্ত উৎস ভান্ডার তৈরি করতে চায় যা অন্যদের ব্যবহার করার জন্য একটি কর্মোদ্যোগ।",
+	"This is where you come in.": "এখানেই আপনার আমন্ত্রণ",
+	"As a team, we are inviting you to join us and contribute upto 30 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "একটি দল হিসাবে, আমরা আপনাকে আমাদের সাথে যোগদানের জন্য আমন্ত্রণ জানাচ্ছি এবং এই উদ্যোগটিতে আপনার ভয়েসের 30মিনিটের অবদান রেখেছি। এক প্রান্তে আপনার ভয়েস রেকর্ডিং অপ্রতিরোধ্য হতে পারে এবং তাই আপনি আমাদের সাথে একাধিকবার দেখা করতে পারেন এবং আপনি যেখান থেকে চলে গিয়েছিলেন সেখান থেকে শুরু করার জন্য আমরা আমাদের ওয়েবসাইটের ব্যবস্থা তৈরি করেছি।",
+	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "আপনার অবদানের প্রতিটি মিনিট একটি বিশাল মতভেদ তৈরি করবে এবং আমাদের উদ্দেশ্যটি সফল করতে সাহায্য করবে।",
+	"Select language": "ভাষা চয়ন করুন",
+	"START RECORDING": "রেকডিং শুরু করুন",
+	"ABOUT THE ORGANISATION": "প্রতিষ্ঠান সম্পর্কে",
+	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "একস্টেপ ফাউন্ডেশন অংশীদারদের একত্রিত করে এবং জটিল সমস্যাগুলি সমাধান করার জন্য উন্মুক্ত কাঠামো, সরঞ্জাম এবং ফ্রেমওয়ার্ক তৈরি করে। আমরা সানবার্ড নামে পরিচিত ওপেন সোর্স ডিজিটাল কাঠামোকে কাজে লাগিয়ে এবং সোসিয়েটাল প্ল্যাটফর্ম অ্যাপ্রোচ নামক চিন্তার উপায় অনুসরণ করে  এটি করে চলেছি",
+	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "একস্টেপ রোহিনী এবং নন্দন নীলেকানি এবং শঙ্কর মারুওয়াদা দ্বারা প্রতিষ্ঠিত একটি অলাভজনক প্রতিষ্ঠান।",
+	"Let's get started!": "চলুন শুরু করি",
+	"SKIP": "এড়িয়ে যান",
+	"STOP RECORDING": "রেকর্ডিং বন্ধ করুন",
+	"Audio recording is too small. Please Re-record": "অডিও রেকর্ডিং খুব ছোট। পুনরায় রেকর্ড করুন",
+	"RE-RECORD": "পুনরায় রেকর্ড করুন",
+	"NEXT": "পরবর্তী",
+	"away from reaching your goal!": "আপনার লক্ষ্যে পৌঁছানো থেকে বঞ্চিত!",
+	"Recording Instructions": "রেকর্ডিং নির্দেশাবলী",
+	"Please test your <b>microphone</b>": "দয়া করে আপনার মাইক্রোফোন পরীক্ষা করুন",
+	"Please test your <b>speakers</b>": "আপনার স্পিকার পরীক্ষা করুন",
+	"Ensure there is <b>no background noise</b>": "নিশ্চিত করুন যে কোনও  গোলমাল নেই",
+	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "রেকর্ডিংয়ের আগে, অনুরোধযোগ্য পাঠ্যটি জোরে জোরে পাঠ  করুন",
+	"Get started by clicking on <b>Record</b> button": "রেকর্ড বোতামে ক্লিক করে শুরু করুন",
+	"START": "START",
+	"Error!!!": "ত্রুটি!!!",
+	"An unexpected error occured while processing your request. Please try after some time.": "আপনার অনুরোধটি প্রক্রিয়া করার সময় একটি অপ্রত্যাশিত ত্রুটি ঘটেছে। কিছু সময় পরে চেষ্টা করুন।",
+	"Close": "বন্ধ করুন",
+	"Thank you for contributing!": "অবদানের জন্য ধন্যবাদ!",
+	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "আপনাদের এই অবদান আমাদের লক্ষ্যকে আরও <b><span id=\"user-contribution\">0 seconds</span></b> সেকেন্ডের কাছাকাছি পৌঁছে দিয়েছে",
+	"Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.": "Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.",
+	"A contribution of 30-45 mins voice per speaker can make Vakyansh come closer to it’s vision.": "আপনার কণ্ঠের ৩০-৪৫ মিনিটের একটি অবদান ভাক্যাংশকে বৈচিত্র্যময় কণ্ঠের একটি উন্মুক্ত ডেটা ভাণ্ডার তৈরি করতে পারে।",
+	"We know you can do more!": "আমরা জানি আরও কিছু করতে পারেন!",
+	"Contribute More": "আরও অবদান রাখুন",
+	"Share it with your friends and family": "আপনার বন্ধু এবং পরিবারের সাথে শেয়ার করুন",
+	"Come Back again to<br />hit your goalpost": "আপনার লক্ষ্য বস্তু  আঘাত করতে আবার ফিরে আসুন",
+	"Instructions": "নির্দেশাবলী",
+	"Play": "শুরু করুন",
+	"Thank you for your enthusiasm to validate the voice samples": "Thank you for your enthusiasm to validate the voice samples",
+	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.",
+	"Would you also like to contribute your voice?": "Would you also like to contribute your voice?",
+	"Start Contributing": "Start Contributing",
+	"Thank you for validating!": "বৈধ হওয়ার জন্য ধন্যবাদ!",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "আপনি আমাদের <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> ভাষার <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span> টি নমুনার মধ্যে <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> টি ভয়েস নমুনাগুলি যাচাই করতে সহায়তা করেছেন",
+	"total hours validated": "মোট বৈধ",
+	"total hours contributed": "মোট অবদান",
+	"Validate More": "আরও বৈধতা দিন",
+	"Validating Instructions": "Validating Instructions"
 }
