|Ramu| updated language transalations

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -1,5 +1,5 @@
 {
-	"Language": "Language",
+	"Language": "বাংলা",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "আমাদের সম্পর্কে",
 	"Select the language for contribution": "অবদানের জন্য ভাষা নির্বাচন করুন",
