--- a/locales/en.json
+++ b/locales/en.json
@@ -137,5 +137,6 @@
 	"Select the language for contribution": "Select the language for contribution",
 	"By hours of data contributed": "By hours of data contributed",
 	"Select Age Group": "Select Age Group",
-	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>"
+	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
+	"Replay": "dsffasdf"
 }
