--- a/locales/ml.json
+++ b/locales/ml.json
@@ -1,5 +1,5 @@
 {
-	"Language": "Language",
+	"Language": "മലയാളം",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "ഞങ്ങളെ കുറിച്ച്",
 	"Select the language for contribution": "സംഭാവന നൽകാനുള്ള ഭാഷ തിരഞ്ഞെടുക്കുക",
