--- a/locales/kn.json
+++ b/locales/kn.json
@@ -1,8 +1,8 @@
 {
-	"Language": "Language",
+	"Language": "ಕನ್ನಡ",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "ನಮ್ಮ ಕುರಿತು",
-	"Select the language for contribution": "സംഭാവന നൽകാനുള്ള ഭാഷ തിരഞ്ഞെടുക്കുക",
+	"Select the language for contribution": "ಕೊಡುಗೆಗಾಗಿ ಭಾಷೆಯನ್ನು ಆಯ್ಕೆಮಾಡಿ",
 	"Say": "ಹೇಳಿ",
 	"Contribute Your Voice": "ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ನೀಡಿ",
 	"Contribute your voice to create an open data repository of Indian languages": "ಭಾರತೀಯ ಭಾಷೆಗಳ ಮುಕ್ತ ಮಾಹಿತಿ ಭಂಡಾರವನ್ನು ರಚಿಸಲು ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ನೀಡಿ",
@@ -93,5 +93,6 @@
 	"Top Languages": "ಉನ್ನತ ಭಾಷೆಗಳು",
 	"By hours of data contributed": "ಮಾಹಿತಿ ಕೊಡುಗೆಯಿಂದ ಸಮಯದೊಳಗೆ",
 	"By number of speakers": "ಭಾಷಣಕಾರರ ಸಂಖ್ಯೆಯಿಂದ",
-	"VIEW ALL DETAILS": "ಎಲ್ಲಾ ವಿವರಗಳನ್ನು ವೀಕ್ಷಿಸಿ"
+	"VIEW ALL DETAILS": "ಎಲ್ಲಾ ವಿವರಗಳನ್ನು ವೀಕ್ಷಿಸಿ",
+	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>"
 }
