|Priyanshu |added translation for recording Insttructions in Hindi

--- a/locales/hi.json
+++ b/locales/hi.json
@@ -21,7 +21,7 @@
 	"By hours of data contributed": "घंटों के आंकड़ों में योगदान दिया",
 	"By number of speakers": "वक्ताओं की संख्या",
 	"VIEW ALL DETAILS": "सभी जानकारी देखें",
-	"Speaker Details": "Speaker Details",
+	"Speaker Details": "वक्ता की जानकारी ",
 	"All the fields are optional but you can enrich your dataset contribution by providing the demographic details.": "All the fields are optional but you can enrich your dataset contribution by providing the demographic details.",
 	"Not You? Change User": "आप नहीं? यूज़र को बदलें",
 	"Username": "यूज़रनेम",
@@ -58,5 +58,22 @@
 	"START RECORDING": "रिकॉर्ड शुरू करेंं",
 	"ABOUT THE ORGANISATION": "संगठन के बारे में ",
 	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "एकस्टेप संगठन सभी भागीदारों को एक साथ लाता है और बड़े पैमाने पर जटिल सामाजिक समस्याओं को हल करने के लिए खुले बुनियादी ढाँचे, उपकरण और रूपरेखा का निर्माण करता है। हम खुले स्रोत के डिजिटल बुनियादी ढांचे का लाभ उठाते हुए ऐसा करते हैं, जिसे हमने सनबर्ड नाम दिया है और सोसिएटल प्लेटफार्म एप्रोच के साथ हम काम करते हैं। ",
-	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "एकस्टेप एक गैर-लाभकारी संगठन है, जिसकी स्थापना रोहिणी, नंदन निलेकनी और शंकर मारुवाड़ा ने की है। "
+	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "एकस्टेप एक गैर-लाभकारी संगठन है, जिसकी स्थापना रोहिणी, नंदन निलेकनी और शंकर मारुवाड़ा ने की है। ",
+	"Let's get started!": "Let's get started!",
+	"SKIP": "SKIP",
+	"STOP RECORDING": "STOP RECORDING",
+	"Audio recording is too small. Please Re-record": "Audio recording is too small. Please Re-record",
+	"RE-RECORD": "RE-RECORD",
+	"NEXT": "NEXT",
+	"away from reaching your goal!": "away from reaching your goal!",
+	"Recording Instructions": "रिकॉर्ड के निर्देश",
+	"Please test your <b>microphone</b>": "कृपया अपना <b>माइक्रोफोन</b> चेक करें",
+	"Please test your <b>speakers</b>": "कृपया अपने <b>स्पीकर</b> चेक करें",
+	"Ensure there is <b>no background noise</b>": "सुनिश्चित करें कि <b>कोई शोर न हो</b>",
+	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "रिकॉर्डिंग से पहले, दिए गए पाठ को <b>जोर से पढ़कर</b> सहज हो जाएं",
+	"Get started by clicking on <b>Record</b> button": "<b>रिकॉर्ड</b> बटन को दबाकर शुरू करें",
+	"START": "शुरू",
+	"Error!!!": "Error!!!",
+	"An unexpected error occured while processing your request. Please try after some time.": "An unexpected error occured while processing your request. Please try after some time.",
+	"Close": "Close"
 }
