--- a/locales/hi.json
+++ b/locales/hi.json
@@ -59,12 +59,12 @@
 	"ABOUT THE ORGANISATION": "संगठन के बारे में ",
 	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "एकस्टेप संगठन सभी भागीदारों को एक साथ लाता है और बड़े पैमाने पर जटिल सामाजिक समस्याओं को हल करने के लिए खुले बुनियादी ढाँचे, उपकरण और रूपरेखा का निर्माण करता है। हम खुले स्रोत के डिजिटल बुनियादी ढांचे का लाभ उठाते हुए ऐसा करते हैं, जिसे हमने सनबर्ड नाम दिया है और सोसिएटल प्लेटफार्म एप्रोच के साथ हम काम करते हैं। ",
 	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "एकस्टेप एक गैर-लाभकारी संगठन है, जिसकी स्थापना रोहिणी, नंदन निलेकनी और शंकर मारुवाड़ा ने की है। ",
-	"Let's get started!": "Let's get started!",
-	"SKIP": "SKIP",
-	"STOP RECORDING": "STOP RECORDING",
-	"Audio recording is too small. Please Re-record": "Audio recording is too small. Please Re-record",
-	"RE-RECORD": "RE-RECORD",
-	"NEXT": "NEXT",
+	"Let's get started!": "चलिए शुरू करते हैं",
+	"SKIP": "छोड़ें",
+	"STOP RECORDING": "रिकॉर्ड करना रोकें",
+	"Audio recording is too small. Please Re-record": "ऑटो रिकॉर्डिंग छोटी थी, कृपया फिर से रिकॉर्ड करें",
+	"RE-RECORD": "फिर से रिकॉर्ड करें",
+	"NEXT": "अगला",
 	"away from reaching your goal!": "away from reaching your goal!",
 	"Recording Instructions": "रिकॉर्ड के निर्देश",
 	"Please test your <b>microphone</b>": "कृपया अपना <b>माइक्रोफोन</b> चेक करें",
@@ -75,5 +75,13 @@
 	"START": "शुरू",
 	"Error!!!": "Error!!!",
 	"An unexpected error occured while processing your request. Please try after some time.": "An unexpected error occured while processing your request. Please try after some time.",
-	"Close": "Close"
+	"Close": "Close",
+	"Thank you for contributing!": "आपके योगदान के लिए शुक्रिया!",
+	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "आपके योगदान के कारण हम अपने लक्ष्य के कुछ <b><span id=\"user-contribution\">0 सेकेंड</span></b> और करीब पहुंच गए हैं!!!",
+	"Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.": "Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.",
+	"A contribution of 30-45 mins voice per speaker can make Vakyansh come closer to it’s vision.": "आपकी आवाज़ का 30 से 45 मिनट के योगदान से वाक्यांश विविध  आवाज़ों के विशाल आधार-सामाग्री संग्रह बना सकता है।",
+	"We know you can do more!": "हम जानते हैं कि आप और भी कर सकते हैं!",
+	"Contribute More": "अधिक योगदान दें।",
+	"Share it with your friends and family": "अपने परिवार और दोस्तों के साथ साझा करें",
+	"Come Back again to<br />hit your goalpost": "अपने लक्ष्य को पूरा करने के लिए वापस आएं"
 }
