--- a/locales/hi.json
+++ b/locales/hi.json
@@ -77,11 +77,14 @@
 	"An unexpected error occured while processing your request. Please try after some time.": "An unexpected error occured while processing your request. Please try after some time.",
 	"Close": "Close",
 	"Thank you for contributing!": "आपके योगदान के लिए शुक्रिया!",
-	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "आपके योगदान के कारण हम अपने लक्ष्य के कुछ <b><span id=\"user-contribution\">0 सेकेंड</span></b> और करीब पहुंच गए हैं!!!",
+	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "आपके योगदान के कारण हम अपने लक्ष्य के कुछ O<b><span id=\"user-contribution\">0 सेकेंड</span></b> और करीब पहुंच गए हैं!!!",
 	"Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.": "Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.",
 	"A contribution of 30-45 mins voice per speaker can make Vakyansh come closer to it’s vision.": "आपकी आवाज़ का 30 से 45 मिनट के योगदान से वाक्यांश विविध  आवाज़ों के विशाल आधार-सामाग्री संग्रह बना सकता है।",
 	"We know you can do more!": "हम जानते हैं कि आप और भी कर सकते हैं!",
 	"Contribute More": "अधिक योगदान दें।",
 	"Share it with your friends and family": "अपने परिवार और दोस्तों के साथ साझा करें",
-	"Come Back again to<br />hit your goalpost": "अपने लक्ष्य को पूरा करने के लिए वापस आएं"
+	"Come Back again to<br />hit your goalpost": "अपने लक्ष्य को पूरा करने के लिए वापस आएं",
+	"Terms and Conditions": "Terms and Conditions",
+	"Terms of Use": "Terms of Use",
+	"Copyright & Licensing Notice": "Copyright & Licensing Notice"
 }
