|Priyanshu | hide instructions from validation page and translate it in Hindi

--- a/locales/hi.json
+++ b/locales/hi.json
@@ -77,14 +77,26 @@
 	"An unexpected error occured while processing your request. Please try after some time.": "An unexpected error occured while processing your request. Please try after some time.",
 	"Close": "Close",
 	"Thank you for contributing!": "आपके योगदान के लिए शुक्रिया!",
-	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "आपके योगदान के कारण हम अपने लक्ष्य के कुछ O<b><span id=\"user-contribution\">0 सेकेंड</span></b> और करीब पहुंच गए हैं!!!",
+	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "आपके योगदान के कारण हम अपने लक्ष्य के कुछ <b><span id=\"user-contribution\">0 सेकेंड</span></b> और करीब पहुंच गए हैं!!!",
 	"Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.": "Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.",
 	"A contribution of 30-45 mins voice per speaker can make Vakyansh come closer to it’s vision.": "आपकी आवाज़ का 30 से 45 मिनट के योगदान से वाक्यांश विविध  आवाज़ों के विशाल आधार-सामाग्री संग्रह बना सकता है।",
 	"We know you can do more!": "हम जानते हैं कि आप और भी कर सकते हैं!",
 	"Contribute More": "अधिक योगदान दें।",
 	"Share it with your friends and family": "अपने परिवार और दोस्तों के साथ साझा करें",
 	"Come Back again to<br />hit your goalpost": "अपने लक्ष्य को पूरा करने के लिए वापस आएं",
-	"Terms and Conditions": "Terms and Conditions",
+	"Terms and Conditions": "नियम एवं शर्तें",
 	"Terms of Use": "Terms of Use",
-	"Copyright & Licensing Notice": "Copyright & Licensing Notice"
+	"Copyright & Licensing Notice": "Copyright & Licensing Notice",
+	"Instructions": "Instructions",
+	"Play": "प्ले करें",
+	"Thank you for your enthusiasm to validate the voice samples": "Thank you for your enthusiasm to validate the voice samples",
+	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.",
+	"Would you also like to contribute your voice?": "Would you also like to contribute your voice?",
+	"Start Contributing": "Start Contributing",
+	"Thank you for validating!": "प्रमाणित करने के लिए शुक्रिया!",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "आपने हमें  <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span>  भाषा में दिए गए  <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span> में से <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> आवाज़ों के नमूनों को प्रमाणित करने में मदद की है।",
+	"total hours validated": "कुल प्रमाणित",
+	"total hours contributed": "कुल योगदान",
+	"Validate More": "अधिक प्रमाणित करें",
+	"Validating Instructions": "Validating Instructions"
 }
