|Priyanshu | hide speech recognition model and update hi.json for Dashboard

--- a/locales/en.json
+++ b/locales/en.json
@@ -138,5 +138,18 @@
 	"By hours of data contributed": "By hours of data contributed",
 	"Select Age Group": "Select Age Group",
 	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
-	"Replay": "dsffasdf"
+	"Replay": "dsffasdf",
+	"Select the language:": "Select the language:",
+	"All Languages": "All Languages",
+	"Data Last Updated:": "Data Last Updated:",
+	"We do not have any data for": "We do not have any data for",
+	"would you like contribute for it?": "would you like contribute for it?",
+	"Contribute Now": "Contribute Now",
+	"hours validated": "hours validated",
+	"Progress Chart": "Progress Chart",
+	"Monthly": "Monthly",
+	"Quarterly": "Quarterly",
+	"Gender Contribution": "Gender Contribution",
+	"State Wise distribution": "State Wise distribution",
+	"Age Group Distribution": "Age Group Distribution"
 }
