--- a/locales/hi.json
+++ b/locales/hi.json
@@ -25,7 +25,7 @@
 	"All the fields are optional but you can enrich your dataset contribution by providing the demographic details.": "All the fields are optional but you can enrich your dataset contribution by providing the demographic details.",
 	"Not You? Change User": "आप नहीं? यूज़र को बदलें",
 	"Username": "यूज़रनेम",
-	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
+	"Please don't use email or mobile number as user name": "एक ईमेल या मोबाइल नंबर यूज़रनेम नहीं हो सकता",
 	"Mother Tongue": "मातृभाषा",
 	"Select Mothertongue": "चयनित मातृ भाषा",
 	"Age Group": "ऐज ग्रुप",
@@ -95,8 +95,23 @@
 	"Start Contributing": "Start Contributing",
 	"Thank you for validating!": "प्रमाणित करने के लिए शुक्रिया!",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "आपने हमें  <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span>  भाषा में दिए गए  <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span> में से <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> आवाज़ों के नमूनों को प्रमाणित करने में मदद की है।",
-	"total hours validated": "कुल प्रमाणित",
-	"total hours contributed": "कुल योगदान",
+	"total hours validated": "कुल प्रमाणित घंटे",
+	"total hours contributed": "कुल योगदान के घंटे",
 	"Validate More": "अधिक प्रमाणित करें",
-	"Validating Instructions": "Validating Instructions"
+	"Validating Instructions": "Validating Instructions",
+	"Select the language:": "भाषा का चयन करें:",
+	"All Languages": "सभी भाषाएं",
+	"Data Last Updated:": "अंतिम बार आधार-सामाग्री अपडेट की गई:",
+	"We do not have any data for": "We do not have any data for",
+	"would you like contribute for it?": "would you like contribute for it?",
+	"Contribute Now": "योगदान के घंटे",
+	"hours validated": "प्रमाणित घंटे",
+	"Progress Chart": "Progress Chart",
+	"Monthly": "Monthly",
+	"Quarterly": "Quarterly",
+	"Gender Contribution": "आयु समूह का योगदान",
+	"State Wise distribution": "राज्यवार वितरण",
+	"Age Group Distribution": "आयु समूह वितरण",
+	"Pick age range": "Pick age range",
+	"I have read and agree to the": "I have read and agree to the"
 }
