|Priyanshu |change value Gujrati to Gujarati and allow all language for contribution except English

--- a/locales/te.json
+++ b/locales/te.json
@@ -3,7 +3,7 @@
 	"Assamese": "Assamese",
 	"Bengali": "বাংলা",
 	"English": "English",
-	"Gujrati": "ગુજરાતી",
+	"Gujurati": "ગુજરાતી",
 	"Hindi": "हिन्दी",
 	"Kannada": "ಕನ್ನಡ",
 	"Malayalam": "മലയാളം",
