--- a/locales/hi.json
+++ b/locales/hi.json
@@ -73,9 +73,9 @@
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "रिकॉर्डिंग से पहले, दिए गए पाठ को <b>जोर से पढ़कर</b> सहज हो जाएं",
 	"Get started by clicking on <b>Record</b> button": "<b>रिकॉर्ड</b> बटन को दबाकर शुरू करें",
 	"START": "शुरू",
-	"Error!!!": "Error!!!",
-	"An unexpected error occured while processing your request. Please try after some time.": "An unexpected error occured while processing your request. Please try after some time.",
-	"Close": "Close",
+	"Error!!!": "एरर!!!",
+	"An unexpected error occured while processing your request. Please try after some time.": "आपके अनुरोध को संसाधित करते समय एक अप्रत्याशित त्रुटि हुई। कृपया कुछ देर बाद प्रयास करें।",
+	"Close": "बंद",
 	"Thank you for contributing!": "आपके योगदान के लिए शुक्रिया!",
 	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "आपके योगदान के कारण हम अपने लक्ष्य के कुछ <b><span id=\"user-contribution\">सेकेंड</span></b> और करीब पहुंच गए हैं!!!",
 	"Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.": "Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.",
@@ -113,5 +113,10 @@
 	"State Wise distribution": "राज्यवार वितरण",
 	"Age Group Distribution": "आयु समूह वितरण",
 	"Pick age range": "Pick age range",
-	"I have read and agree to the": "I have read and agree to the"
+	"I have read and agree to the": "I have read and agree to the",
+	"Oops": "Oops",
+	"Page Not Found": "पेज नहीं मिल रहा",
+	"Looks like you have taken a wrong turn here": "लगता है आपने गलत तरीका चुन लिया है",
+	"Click Here": "यहाँ क्लिक करें",
+	"to go back to home page": "अपने होम पेज पर जाने के लिए"
 }
