--- a/locales/ta.json
+++ b/locales/ta.json
@@ -3,7 +3,7 @@
 	"Assamese": "Assamese",
 	"Bengali": "বাংলা",
 	"English": "English",
-	"Gujrati": "ગુજરાતી",
+	"Gujarati": "ગુજરાતી",
 	"Hindi": "हिन्दी",
 	"Kannada": "ಕನ್ನಡ",
 	"Malayalam": "മലയാളം",
