|Ramu| Add missing translations

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -5,7 +5,7 @@
 	"Select the language for contribution": "অবদানের জন্য ভাষা নির্বাচন করুন",
 	"Say": "বলুন",
 	"Contribute Your Voice": "আপনার ভয়েস অবদান রাখুন",
-	"Contribute your voice to create an open data repository of Indian languages": "Contribute your voice to create an open data repository of Indian languages",
+	"Contribute your voice to create an open data repository of Indian languages": "ভারতীয় ভাষায় একটি উন্মুক্ত ডেটার ভান্ডার তৈরি করার জন্য আপনার ভয়েস অবদান করুন",
 	"Listen": "শুনুন",
 	"Verify What They Say": "তারা যা বলে তা যাচাই করুন",
 	"Help us by validating the voice samples that others have contributed": "অন্যরা যে অবদান রেখেছিল তার ভয়েস নমুনাগুলি যাচাই করে আমাদের সহায়তা করুন",
@@ -22,7 +22,7 @@
 	"By number of speakers": "স্পিকার সংখ্যা দ্বারা",
 	"VIEW ALL DETAILS": "সমস্ত বিবরণ দেখুন",
 	"Speaker Details": "স্পিকারের বিবরণ",
-	"All the fields are optional but you can enrich your dataset contribution by providing the demographic details.": "All the fields are optional but you can enrich your dataset contribution by providing the demographic details.",
+	"All the fields are optional": "সমস্ত ক্ষেত্র ঐচ্ছিক",
 	"Not You? Change User": "আপনি কি ? ব্যবহারকারী পরিবর্তন করুন",
 	"Username": "ব্যবহারকারীর নাম",
 	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
