--- a/locales/en.json
+++ b/locales/en.json
@@ -17,7 +17,7 @@
 	"Gender": "Gender",
 	"START RECORDING IN": "START RECORDING IN",
 	"Speaker Details": "Speaker Details",
-	"All the fields are optional but you can enrich your dataset contribution by providing the demographic details.": "All the fields are optional but you can enrich your dataset contribution by providing the demographic details.",
+	"All the fields are optional": "All the fields are optional",
 	"Not You? Change User": "Not You? Change User",
 	"Username": "Username",
 	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
