--- a/locales/hi.json
+++ b/locales/hi.json
@@ -22,7 +22,7 @@
 	"By number of speakers": "वक्ताओं की संख्या",
 	"VIEW ALL DETAILS": "सभी जानकारी देखें",
 	"Speaker Details": "वक्ता की जानकारी ",
-	"All the fields are optional but you can enrich your dataset contribution by providing the demographic details.": "All the fields are optional but you can enrich your dataset contribution by providing the demographic details.",
+	"All the fields are optional": "सभी चीज़ें वैकल्पिक हैं।",
 	"Not You? Change User": "आप नहीं? यूज़र को बदलें",
 	"Username": "यूज़रनेम",
 	"Please don't use email or mobile number as user name": "एक ईमेल या मोबाइल नंबर यूज़रनेम नहीं हो सकता",
