--- a/locales/kn.json
+++ b/locales/kn.json
@@ -17,8 +17,8 @@
 	"languages contributed": "ಭಾಷೆಗಳ ಕೊಡುಗೆ",
 	"speakers contributed": "ಭಾಷಣಕಾರರು ಕೊಡುಗೆ ನೀಡಿದ್ದಾರೆ",
 	"hours recorded": "ಸಮಯ ದಾಖಲಿಸಲಾಗಿದೆ",
-	"Speaker Details": "Speaker Details",
-	"All the fields are optional but you can enrich your dataset contribution by providing the demographic details.": "All the fields are optional but you can enrich your dataset contribution by providing the demographic details.",
+	"Speaker Details": "ಸ್ಪೀಕರ್ ವಿವರಗಳು",
+	"All the fields are optional": "ಎಲ್ಲಾ ಕ್ಷೇತ್ರಗಳು ಐಚ್ಛಿಕ",
 	"Not You? Change User": "ನಿವಲ್ಲವೇ?  ಬಳಕೆದಾರರನ್ನು ಬದಲಾಯಿಸಿ",
 	"Username": "ಬಳಕೆದಾರರ ಹೆಸರು",
 	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
