--- a/locales/ta.json
+++ b/locales/ta.json
@@ -31,7 +31,7 @@
 	"Mother Tongue": "Mother Tongue",
 	"Age Group": "Age Group",
 	"Gender": "Gender",
-	"All the fields are optional but you can enrich your dataset contribution by providing the demographic details.": "All the fields are optional but you can enrich your dataset contribution by providing the demographic details.",
+	"All the fields are optional": "All the fields are optional",
 	"Not You? Change User": "Not You? Change User",
 	"Username": "Username",
 	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
