|Ramu| Add missing translation

--- a/locales/ml.json
+++ b/locales/ml.json
@@ -22,7 +22,7 @@
 	"By number of speakers": "വ്യക്തികളുടെ എണ്ണം അനുസരിച്ച്",
 	"VIEW ALL DETAILS": "എല്ലാ വിശദാംശങ്ങളും കാണുക",
 	"Speaker Details": "ശബ്ദം നൽകിയ വ്യക്തിയുടെ വിശദാംശങ്ങൾ",
-	"All the fields are optional but you can enrich your dataset contribution by providing the demographic details.": "എല്ലാ ഫീൽഡുകളും ഐച്ഛികമാണ് but you can enrich your dataset contribution by providing the demographic details.",
+	"All the fields are optional": "എല്ലാ ഫീൽഡുകളും ഐച്ഛികമാണ്",
 	"Not You? Change User": "നിങ്ങളല്ലേ? യൂസറെ മാറ്റുക",
 	"Username": "യൂസർനെയിം",
 	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
